# 2qt-dtm

./: .gitignore  pyproject.toml
ass1/: interface.py  my_code_hw01.py  test_my_code_hw01.py
ass2/: geo1015_hw02-1.py  geo1015_hw02.py  raster_stats.py  terrain.tif
ass3/: geo1015_hw03.py  my_code_hw03.py
ass4/cpp/: README.html  README.md
ass4/py/: main.py
