[tool.poetry]
name = "2qt-dtm"
version = "0.1.0"
description = ""
authors = ["HideBa <baba.papa1120.ba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rasterio = "^1.3.9"
laspy = "^2.5.1"
pyproj = "^3.6.1"
startinpy = "^0.10.0"
scipy = "^1.11.3"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
pillow = "^10.1.0"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
